@@ -316,12 +316,18 @@ trait Protocol
     Symbol.encode_yxml(list(pair(string, string))(table))
   }
 
+  private def encode_list(lst: List[String]): String =
+  {
+    import XML.Encode._
+    Symbol.encode_yxml(list(string)(lst))
+  }
+
   def session_base(resources: Resources)
   {
     val base = resources.session_base.standard_path
     protocol_command("Prover.session_base",
       encode_table(base.global_theories.toList),
-      encode_table(base.loaded_theories.toList),
+      encode_list(base.loaded_theories.toList),
       encode_table(base.dest_known_theories))
   }
 
